--- a/SortPeople/SortPeople/Base.lproj/Main.storyboard
+++ b/SortPeople/SortPeople/Base.lproj/Main.storyboard
@@ -30,14 +30,66 @@
                     <view key="view" contentMode="scaleToFill" id="n3q-MK-yCS">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6HE-aD-XZU">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="biN-Cq-hbx" userLabel="swipeview">
+                                        <rect key="frame" x="30" y="40" width="354" height="618"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UKM-4G-kWU" userLabel="bottom view">
+                                        <rect key="frame" x="10" y="678" width="394" height="120"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="VtE-Pe-DaX">
+                                                <rect key="frame" x="0.0" y="0.0" width="394" height="120"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hZ0-5M-aZ3">
+                                                        <rect key="frame" x="0.0" y="0.0" width="197" height="120"/>
+                                                        <state key="normal" title="Button" image="noButton"/>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uhc-ZE-KGs">
+                                                        <rect key="frame" x="197" y="0.0" width="197" height="120"/>
+                                                        <state key="normal" title="Button" image="yesButton"/>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="VtE-Pe-DaX" secondAttribute="bottom" id="ABe-Yl-AVg"/>
+                                            <constraint firstItem="VtE-Pe-DaX" firstAttribute="leading" secondItem="UKM-4G-kWU" secondAttribute="leading" id="BmF-9A-ghd"/>
+                                            <constraint firstItem="VtE-Pe-DaX" firstAttribute="top" secondItem="UKM-4G-kWU" secondAttribute="top" id="IHi-WY-Xel"/>
+                                            <constraint firstAttribute="trailing" secondItem="VtE-Pe-DaX" secondAttribute="trailing" id="dVu-58-imo"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="biN-Cq-hbx" secondAttribute="trailing" constant="30" id="483-5u-nC6"/>
+                                    <constraint firstAttribute="bottom" secondItem="biN-Cq-hbx" secondAttribute="bottom" constant="150" id="7sv-9K-InC"/>
+                                    <constraint firstItem="UKM-4G-kWU" firstAttribute="leading" secondItem="6HE-aD-XZU" secondAttribute="leading" constant="10" id="LF6-Uq-w3w"/>
+                                    <constraint firstItem="biN-Cq-hbx" firstAttribute="leading" secondItem="6HE-aD-XZU" secondAttribute="leading" constant="30" id="kv5-T1-vgv"/>
+                                    <constraint firstAttribute="trailing" secondItem="UKM-4G-kWU" secondAttribute="trailing" constant="10" id="mRx-cJ-rJb"/>
+                                    <constraint firstAttribute="bottom" secondItem="UKM-4G-kWU" secondAttribute="bottom" constant="10" id="nIx-og-FL5"/>
+                                    <constraint firstItem="UKM-4G-kWU" firstAttribute="top" secondItem="biN-Cq-hbx" secondAttribute="bottom" constant="20" id="no1-Oa-Ky0"/>
+                                    <constraint firstItem="biN-Cq-hbx" firstAttribute="top" secondItem="6HE-aD-XZU" secondAttribute="top" constant="40" id="x7N-Sv-dpQ"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6HE-aD-XZU" firstAttribute="top" secondItem="n3q-MK-yCS" secondAttribute="top" constant="88" id="CiX-eO-oQf"/>
+                            <constraint firstAttribute="bottom" secondItem="6HE-aD-XZU" secondAttribute="bottom" id="RO6-0h-GLn"/>
+                            <constraint firstItem="6HE-aD-XZU" firstAttribute="leading" secondItem="n3q-MK-yCS" secondAttribute="leading" id="jvn-HJ-JQj"/>
+                            <constraint firstAttribute="trailing" secondItem="6HE-aD-XZU" secondAttribute="trailing" id="xdg-sG-woE"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="HQA-KH-xHE"/>
                     </view>
                     <navigationItem key="navigationItem" id="3by-QB-Ha3"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rKh-Ud-GZd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-97.101449275362327" y="-336.16071428571428"/>
+            <point key="canvasLocation" x="463.768115942029" y="-575.22321428571422"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9Uw-FF-aqE">
@@ -79,6 +131,8 @@
     </scenes>
     <resources>
         <image name="eye" catalog="system" width="64" height="40"/>
+        <image name="noButton" width="100" height="100"/>
         <image name="person" catalog="system" width="64" height="58"/>
+        <image name="yesButton" width="100" height="100"/>
     </resources>
 </document>
